@@ -25,7 +25,6 @@ noinst_HEADERS = \
 mwincludedir = $(includedir)/meanwhile
 
 libmeanwhile_la_CFLAGS = \
-	-Wall -Werror -Wno-format \
 	$(DEBUG_CFLAGS) \
 	$(GLIB_CFLAGS)
 
